objects/Account_Deeds_Badges__mdt.object
<CustomObject>
    <fields>
        <fullName>ASID__c</fullName>
        <label>ASID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automation_Type__c</fullName>
        <label>Automation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Badges</fullName>
                    <default>true</default>
                    <label>Client Badges</label>
                </value>
                <value>
                    <fullName>Client Deed Weight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Weight__c</fullName>
        <label>Service Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Deeds &amp; Badges</label>
    <pluralLabel>Account Deeds &amp; Badges</pluralLabel>
</CustomObject>